Data transfer modifier vertex group selector doesn't work with freestyle data #48325

Closed
opened 2016-05-01 01:10:01 +02:00 by voltam · 6 comments

System Information

  CPU: AMD FX-8320
  RAM: 8 GB
  GFX: nVidia Geforce GTX 750 ti, 2048MB
  OS: Ubuntu 16.04, KDE plasma 5.6, Linux kernel v4.3.6
  Drivers: NVIDIA binary driver - version 361.42-0ubuntu2, NVIDIA CUDA development toolkit 7.5.18-0ubuntu1

Blender Version
Broken: Blender 2.77a - Hash: abf6f08

Short description of error
Data transfer modifier vertex group selector is ignored with freestyle edge marks and freestyle face marks.

Exact steps for others to reproduce the error

  1. Default scene, select cube
  2. Subdivide level 2 the cube, and apply the subdivision modifier
  3. Duplicate the sphere and place it nearby
  4. Select the original sphere, and in edit mode select some edges, (like the blend file)
  5. Make those selected edges "freestyle edge marks"
  6. Go to object mode, and select the duplicated sphere
  7. Go to edit mode, select a contiguous area of faces, 4 in the blend file
  8. Create a vertex group and assign the selection to this new vertex group
  9. Leave edit mode, and add a data transfer modifier
  10. In the tab for data transfer modifier, select edge data, then tick freestyle marks, use topology for geometry mapping, for the source object use the original sphere, for the vertex group select the vertex group previously created.
  11. Press the Generate Data Layers button
  12. go to render options and tick the freestyle feature
  13. go to render layers, in freestyle line set, tick the option "Edge Mark"
  14. Render
  15. The two spheres have the same set of lines drawn, ignoring the vertex group.

The expected result would be to have the original sphere with the full freestyle set, and the duplicated one with the freestyle set given by the vertex group.
I Tested Data transfer modifier vertex group selector with:

**System Information** ``` CPU: AMD FX-8320 RAM: 8 GB GFX: nVidia Geforce GTX 750 ti, 2048MB OS: Ubuntu 16.04, KDE plasma 5.6, Linux kernel v4.3.6 Drivers: NVIDIA binary driver - version 361.42-0ubuntu2, NVIDIA CUDA development toolkit 7.5.18-0ubuntu1 ``` **Blender Version** Broken: Blender 2.77a - Hash: abf6f08 **Short description of error** Data transfer modifier vertex group selector is ignored with freestyle edge marks and freestyle face marks. **Exact steps for others to reproduce the error** 1) Default scene, select cube 2) Subdivide level 2 the cube, and apply the subdivision modifier 3) Duplicate the sphere and place it nearby 4) Select the original sphere, and in edit mode select some edges, (like the blend file) 5) Make those selected edges "freestyle edge marks" 6) Go to object mode, and select the duplicated sphere 7) Go to edit mode, select a contiguous area of faces, 4 in the blend file 8) Create a vertex group and assign the selection to this new vertex group 9) Leave edit mode, and add a data transfer modifier 10) In the tab for data transfer modifier, select edge data, then tick freestyle marks, use topology for geometry mapping, for the source object use the original sphere, for the vertex group select the vertex group previously created. 12) Press the Generate Data Layers button 13) go to render options and tick the freestyle feature 14) go to render layers, in freestyle line set, tick the option "Edge Mark" 15) Render 16) The two spheres have the same set of lines drawn, ignoring the vertex group. The expected result would be to have the original sphere with the full freestyle set, and the duplicated one with the freestyle set given by the vertex group. I Tested Data transfer modifier vertex group selector with: - Vertex data: Vertex groups. - Edge Data: Sharp, UV seam, Subsurface crease, Bevel Weight, Freestyle mark - Face data: Smooth, freestyle face mark And all of them work as expected, except the freestyle ones. the blend file, [DataTransferModifierSelector_FreestyleBug.blend](https://archive.blender.org/developer/F308251/DataTransferModifierSelector_FreestyleBug.blend) have these tests. [system-info.txt](https://archive.blender.org/developer/F308252/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @voltam

Added subscriber: @voltam

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-05-01 09:43:23 +02:00

Would have said this probably came from 'boolean' nature of freestyle markers, but you say sharp tag works OK… Anyway, will check on this later.

Would have said this probably came from 'boolean' nature of freestyle markers, but you say sharp tag works OK… Anyway, will check on this later.

This issue was referenced by 4e4ff72d13

This issue was referenced by 4e4ff72d13f4e0cae3ee75e944c1eb836285c009

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48325
No description provided.