Fix T48325: Data transfer modifier vertex group selector doesn't work with freestyle data.

Freestyle edge/face marks are (afaik) our only actual customdata bitflags... Original work
kinda assumed we had no such things. :P